--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@using AspNetMonsters.Blazor.Geolocation
 @using BlazorApp2.Shared
+@using Models
 @inject LocationService  LocationService
 @inject HttpClient Http
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
@@ -7,9 +8,9 @@
 
 
 
-<h1>Welcome @myname</h1>
+<h1>Welcome @indexModel.MyName</h1>
 
-Your GUID: @guid.ToString()
+Your GUID: @guidstring
 
 <h3>You are here</h3>
 <div>
@@ -27,25 +28,39 @@ Your GUID: @guid.ToString()
 
 
 </div>
-<h3>Update your name</h3>
-<p>
-    <input type="text" value=@myname @onchange="UpdateNameAsync"  />
-</p>
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+<EditForm Model="@indexModel" OnValidSubmit="@UpdateNameAsync">
+
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+    <div class="form-group">
+        <label for="name">Change your name</label>
+        <InputText class="form-control" id="name" @bind-Value="@indexModel.MyName" />
+    </div>
+    <div class="form-group">
+        <label for="bio">Change your bio</label>
+        <InputTextArea class="form-control" id="bio" @bind-Value="@indexModel.MyBio" />
+    </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+
+</EditForm>
+
+
+
 @functions
 {
     Location location;
     CityInfo closestCity;
-    Guid guid;
-    string guidstring;
-    private string myname;
+    Guid guid = Guid.Empty;
+    string guidstring = string.Empty;
+    IndexModel indexModel = new IndexModel() { MyBio = string.Empty, MyName = string.Empty };
 
 
     protected override async Task OnInitializedAsync()
     {
+
         location = await LocationService.GetLocationAsync();
         guidstring = await sessionStorage.GetItemAsync<string>("guid");
-        myname = await sessionStorage.GetItemAsync<string>("name");
         if (string.IsNullOrEmpty(guidstring))
         {
             guid = Guid.NewGuid();
@@ -66,15 +81,20 @@ Your GUID: @guid.ToString()
         args.Lat = (double)location.Latitude;
         args.Lng = (double)location.Longitude;
         var response = await Http.PostAsJsonAsync("City", args);
+        var inforesponse = await Http.GetFromJsonAsync<MyInfo>($"Name/{guid}");
         closestCity = await response.Content.ReadFromJsonAsync<CityInfo>();
+        indexModel.MyBio = inforesponse.MyBio;
+        indexModel.MyName = inforesponse.MyName;
+
     }
-    private async Task UpdateNameAsync(ChangeEventArgs ceargs)
+    private async Task UpdateNameAsync()
     {
-        myname = ceargs.Value.ToString();
-        var args = new UpdateNameArgs();
-        args.MyName = myname;
+
+        var args = new UpdateRuggerArgs();
+        args.MyName = indexModel.MyName;
         args.MyGuid = guid;
+        args.Bio = indexModel.MyBio;
         await Http.PostAsJsonAsync("Name", args);
-        await sessionStorage.SetItemAsync("name", myname);
     }
+
 }
