--- a/BlazorApp2/Client/Pages/Profile.razor
+++ b/BlazorApp2/Client/Pages/Profile.razor
@@ -5,11 +5,37 @@
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
 @page "/profile/{id:guid}"
 
-<h3>Profile</h3>
-Name 
+
+
+
+<div class="jumbotron">
+    <h1 class="display-4">@pi.Name</h1>
+    <p class="lead">@pi.City</p>
+    <hr class="my-4">
+    <p>@pi.Bio</p>
+    <ul class="list-group">
+        <li class="list-group-item">
+            Near @pi.City
+        </li>
+        <li class="list-group-item">
+            @pi.DaysSinceLastLogin days since last login.
+        </li>
+        <li class="list-group-item">
+            @pi.DaysSinceCreate days since created
+        </li>
+    </ul>
+  
+</div>
 
 @code {
+    ProfileInfo pi = new ProfileInfo() { DaysSinceCreate = 0, DaysSinceLastLogin = 0, City = string.Empty, Bio = string.Empty, Name = string.Empty };
+
 
     [Parameter]
-    public int Id { get; set; }
+    public Guid Id { get; set; }
+    protected override async Task OnInitializedAsync()
+    {
+        pi = await Http.GetFromJsonAsync<ProfileInfo>($"Profile/{Id}");
+
+    }
 }
