--- a/BlazorApp2/Client/Pages/Profile.razor
+++ b/BlazorApp2/Client/Pages/Profile.razor
@@ -23,6 +23,9 @@
         <li class="list-group-item">
             @pi.DaysSinceCreate days since created
         </li>
+        <li class="list-group-item">
+            Plays For @pi.TeamName
+        </li>
     </ul>
   
 </div>
