--- a/BlazorApp2/Client/Shared/NavMenu.razor
+++ b/BlazorApp2/Client/Shared/NavMenu.razor
@@ -23,8 +23,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="viewusers">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> View Users
+            <NavLink class="nav-link" href="teamcreator">
+                <span class="oi oi-star" aria-hidden="true"></span> Create Team
             </NavLink>
         </li>
     </ul>
