Added dapper one to one relationship mapping in teammodel and teamcontroller and proc_getclosestteamsbyrugger. Also cleaned up some captialization.

--- a/BlazorApp2/Client/Pages/Teampicker.razor
+++ b/BlazorApp2/Client/Pages/Teampicker.razor
@@ -13,6 +13,7 @@
         <label for="selectteam">
             Select Your Team:
             <InputSelect id="selectteam" class="custom-select" @bind-Value="selectedTeam">
+                <option selected>Pick a Team</option>
                 @foreach (var t in closestTeams)
                 {
                     <option value="@t.TeamId">@t.TeamName</option>
