--- a/BlazorApp2/Client/Pages/TeamCreator.razor
+++ b/BlazorApp2/Client/Pages/TeamCreator.razor
@@ -14,6 +14,7 @@
     <InputTextArea class="form-control" id="bio" @bind-Value="teamModel.TeamBio" />
     <label for="city">City</label>
     <InputSelect class="form-control" id="city" @bind-Value="teamModel.TeamCityId">
+        <option>Please Select A Home City For This Team</option>
         @foreach (var c in cityInfos)
         {
             <option value="@c.CityId">@c.City</option>
@@ -23,9 +24,9 @@
 </EditForm>
 
 @code {
-    string guidstring = string.Empty;
-    TeamPutModel teamModel = new TeamPutModel();
-    IEnumerable<CityInfo> cityInfos = new CityInfo[0];
+        string guidstring = string.Empty;
+        TeamPutModel teamModel = new TeamPutModel();
+        IEnumerable<CityInfo> cityInfos = new CityInfo[0];
 
     protected override async Task OnInitializedAsync()
     {
@@ -34,9 +35,12 @@
     }
     async Task CreateTeamAsync()
     {
-        teamModel.TeamId = Guid.NewGuid();
-        teamModel.RuggerOwner = Guid.Parse(guidstring);
-        await Http.PostAsJsonAsync("/teams", teamModel);
-        NavigationManager.NavigateTo("/teampicker");
+        if (teamModel.TeamCityId != 0)
+        {
+            teamModel.TeamId = Guid.NewGuid();
+            teamModel.RuggerOwner = Guid.Parse(guidstring);
+            await Http.PostAsJsonAsync("/teams", teamModel);
+            NavigationManager.NavigateTo("/teampicker");
+        }
     }
 }
