added default team pic, added team lister and team profile

--- a/BlazorApp2/Client/Pages/Teams.razor
+++ b/BlazorApp2/Client/Pages/Teams.razor
@@ -3,24 +3,34 @@
 @inject LocationService  LocationService
 @inject HttpClient Http
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+@inject NavigationManager MyNavigationManager
+
 @page "/teams"
 <h3>Teams</h3>
 @foreach (var p in teams)
 {
-    <li class="media">
-        <img class="mr-3" src"..." alt="GPI" />
-        <div class="media-body">
-            
-            <a href="/TeamProfile/@p.TeamId">@p.TeamName</a>
-            <h3>@p.City.City</h3>
-            @p.TeamBio
+    <div class="container">
+        <ul class="list-unstyled">
+            <li class="media">
+                <img class="mr-3" src="@MyNavigationManager.BaseUri/Pics/rsz_parrot-2756488_1280.jpg" alt="GPI" />
+                <div class="media-body">
 
-        </div>
-    </li>
+                    <h3>@p.TeamName</h3>
+                    <h4>@p.City.City, @p.City.Admin_name, @p.City.Country</h4>
+                    @p.TeamBio
+                    <a href="teamprofile/@p.TeamId">Profile</a>
+                </div>
+            </li>
+        </ul>
+    </div>
 }
 
 @code {
     IEnumerable<TeamModel> teams = new TeamModel[0];
-
-
+    string guidstring = string.Empty;
+    protected override async Task OnInitializedAsync()
+    {
+        var guidstring = await sessionStorage.GetItemAsync<string>("guid");
+        teams = await Http.GetFromJsonAsync<IEnumerable<TeamModel>>($"teams/{guidstring}");
+    }
 }
