--- a/BlazorApp2/Client/Shared/NavMenu.razor
+++ b/BlazorApp2/Client/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="users">
-                <span class="oi oi-plus" aria-hidden="true"></span> Users
+                <span class="oi oi-person" aria-hidden="true"></span> Players
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="teams">
+                <span class="oi oi-people" aria-hidden="true"></span> Teams
             </NavLink>
         </li>
         <li class="nav-item px-3">
