--- a/BlazorApp2/Client/Pages/TeamProfile.razor
+++ b/BlazorApp2/Client/Pages/TeamProfile.razor
@@ -5,7 +5,7 @@
 @page "/teamprofile/{id:guid}"
 <h3>TeamProfile</h3>
 <div class="card" style="width: 18rem;">
-
+    <img class="card-img-top" src="@imageDataUri" alt="TeamProfilePicture" />
     <div class="card-body">
         <h5 class="card-title">@tm?.TeamName</h5>
         <h6>@tm?.City.City, @tm?.City.Admin_name, @tm?.City.Country</h6>
@@ -13,13 +13,20 @@
     </div>
 </div>
 @code {
-    [Parameter]
-    public Guid Id { get; set; }
-    TeamModel tm;
+        [Parameter]
+        public Guid Id { get; set; }
+        TeamModel tm;
+        string imageDataUri = "";
+        string format = "image/png";
+
     protected override async Task OnInitializedAsync()
     {
         //tm = await Http.GetFromJsonAsync<TeamModel>($"teams/profile/{Id}");
         //var test = await Http.GetAsync($"teamprofile/{Id}");
         tm = await Http.GetFromJsonAsync<TeamModel>($"TeamProfile/{Id}");
+        if (tm.TeamPic != null && tm.TeamPic.Length > 0)
+        {
+            imageDataUri = $"data:{format};base64,{Convert.ToBase64String(tm.TeamPic)}";
+        }
     }
 }
