--- a/BlazorApp2/Client/Pages/Teams.razor
+++ b/BlazorApp2/Client/Pages/Teams.razor
@@ -12,7 +12,7 @@
     <div class="container">
         <ul class="list-unstyled">
             <li class="media">
-                <img class="mr-3" src="@MyNavigationManager.BaseUri/Pics/rsz_parrot-2756488_1280.jpg" alt="GPI" />
+                <img class="mr-3" src="@p.TeamImageURI" alt="GPI" />
                 <div class="media-body">
 
                     <h3>@p.TeamName</h3>
